Add extractor and reader